bump library to 1.0.0; add h2 test files