@@ -1,7 +1,7 @@
 package com.thanlinardos.resource_server.model.mapped;
 
 import com.thanlinardos.resource_server.model.entity.RoleJpa;
-import com.thanlinardos.spring_enterprise_library.spring_cloud_security.model.mapped.base.BasicIdModel;
+import com.thanlinardos.spring_enterprise_library.model.mapped.base.BasicIdModel;
 import com.thanlinardos.spring_enterprise_library.spring_cloud_security.model.base.Authority;
 import com.thanlinardos.spring_enterprise_library.spring_cloud_security.model.base.Role;
 import lombok.*;
@@ -13,7 +13,6 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.thanlinardos.spring_enterprise_library.spring_cloud_security.constants.SecurityCommonConstants.ROLE_PREFIX;
 
@@ -43,7 +42,8 @@ public class RoleModel extends BasicIdModel implements Serializable, Role {
         return authorities.stream()
                 .map(Authority::getName)
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .map(GrantedAuthority.class::cast)
+                .toList();
     }
 
     @Override
